--- a/src/localization/dictionaries/en.json
+++ b/src/localization/dictionaries/en.json
@@ -12,7 +12,8 @@
       "full_name": "Full Name",
       "phone": "Phone",
       "submit": "Create Account",
-      "success": "Please, check your email to complete your registration"
+      "success": "Please, check your email to complete your registration",
+      "fail": "We are having problems while attempting to create your account"
     },
     "home": {
       "title": "Home"
