--- a/src/localization/dictionaries/pt-BR.json
+++ b/src/localization/dictionaries/pt-BR.json
@@ -47,9 +47,8 @@
   },
   "validation": {
     "invalid_login_credentials": "Email ou senha inválidos",
-    "invalid_email": "Endereço de email inválido",
-    "invalid": "Campo inválido",
-    "required": "Campo obrigatório",
+    "required_or_invalid_email": "Informe um endereço de email válido, exemplo: nome@exemplo.com",
+    "required_password": "Informe sua senha",
     "password_too_short": "Senha deve conter pelo menos {{ count }} caracteres"
   },
   "common": {
