Add tenants page

--- a/src/features/localization/dictionaries/en.json
+++ b/src/features/localization/dictionaries/en.json
@@ -64,6 +64,9 @@
       "input_label_description": "Description",
       "input_label_category": "Category",
       "succeeded_update_occurrence": "Occurrence updated successfully"
+    },
+    "tenants": {
+      "title": "Tenants"
     }
   },
   "boolean": {
