Add common areas page

--- a/src/features/localization/dictionaries/en.json
+++ b/src/features/localization/dictionaries/en.json
@@ -67,6 +67,9 @@
     },
     "tenants": {
       "title": "Tenants"
+    },
+    "commonAreas": {
+      "title": "Common Areas"
     }
   },
   "boolean": {
