--- a/src/features/localization/dictionaries/pt-BR.json
+++ b/src/features/localization/dictionaries/pt-BR.json
@@ -67,6 +67,9 @@
     },
     "tenants": {
       "title": "Moradores"
+    },
+    "commonAreas": {
+      "title": "Áreas Comuns"
     }
   },
   "boolean": {
